<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_result"
        tools:context="com.titanbbl.funny.face.filter.game.ui.component.result.ResultActivity">

        <!-- Back Button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#FFE274"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_back_result" />
        </androidx.cardview.widget.CardView>

        <!-- Share Button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btnHome"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="#FFE274"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_home_result" />
        </androidx.cardview.widget.CardView>

        <!-- Result Video Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/resultImageCard"
            android:layout_width="218dp"
            android:layout_height="317dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnBack">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


      <VideoView
          android:id="@+id/resultVideo"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <!-- Share Button on Image -->
      <ImageView
          android:id="@+id/shareButtonOverlay"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_gravity="bottom|end"
          android:layout_margin="8dp"
          android:src="@drawable/ic_zoom"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- Share Options Container -->
        <LinearLayout
            android:id="@+id/shareOptionsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultImageCard">

            <!-- Save Option -->
            <LinearLayout
                android:id="@+id/saveOption"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="32dp"
                    android:layout_height="32dp">

                    <View
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/circle_green" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_save" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/save"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- TikTok Option -->
            <LinearLayout
                android:id="@+id/tiktokOption"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_marginStart="22dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="32dp"
                    android:layout_height="32dp">

                    <View
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/circle_black" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_tiktok" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="TikTok"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Instagram Option -->
            <LinearLayout
                android:id="@+id/instagramOption"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_marginStart="22dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="32dp"
                    android:layout_height="32dp">

                    <View
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/circle_instagram" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_instagram" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Instagram"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Facebook Option -->
            <LinearLayout
                android:id="@+id/facebookOption"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_marginStart="22dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="32dp"
                    android:layout_height="32dp">

                    <View
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/circle_facebook" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_facebook" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Facebook"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Other Option -->
            <LinearLayout
                android:id="@+id/otherOption"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_marginStart="22dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="32dp"
                    android:layout_height="32dp">

                    <View
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/circle_gray" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_more" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/other"
                    android:textColor="#000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Try Other Templates Section -->
        <TextView
            android:visibility="gone"
            android:id="@+id/txtTryOtherTemplates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/try_other_templates"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/templatesContainer"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Templates Container -->
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/templatesContainer"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_template" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>